Implement comments functionality

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "paths": {
       "@controllers/*": ["controllers/*"],
       "@routes/*": ["routes/*"],
+      "@middleware/*": ["middleware/*"],
       "@prismaClient": ["prismaClient.ts"]
     }
   },
