--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@eslint/js": "^9.23.0",
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.14",
     "eslint": "^9.23.0",
     "eslint-plugin-react": "^7.37.4",
@@ -32,7 +33,9 @@
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "argon2": "^0.41.1",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2"
   }
 }
